tests/fixtures/functional_patterns/negative/n44_rc_clone.rs
use std::rc::Rc;

fn duplicate_rc(data: Rc<i32>) -> Rc<i32> {
    Rc::clone(&data)
}
